<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android" a:key="PintyPrefs">
    <PreferenceCategory a:title="@string/preference_category_main">
        <ListPreference
                a:title="@string/preference_drink_choice_title"
                a:summary="@string/preference_drink_choice_summary"
                a:key="favourite_drink"
                a:defaultValue="1"
                a:entries="@array/drink_type_names"
                a:entryValues="@array/drink_type_values"/>
        <CheckBoxPreference a:key="show_cafes" a:title="@string/preference_show_cafes"
                            a:summary="@string/preference_show_cafes_summary" a:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory a:title="@string/preference_category_stats">
        <Preference a:title="@string/preference_last_data_update" a:key="last_data_update"
                    a:editable="false"
                    a:defaultValue="unknown"
                />
    </PreferenceCategory>
    <PreferenceCategory a:title="@string/preference_category_developer">
        <CheckBoxPreference a:key="developer_mode" a:title="@string/preference_developer_mode" a:defaultValue="false"/>
        <ListPreference a:title="@string/preference_dev_server_list"
                        a:entries="@array/built_in_server_names"
                        a:entryValues="@array/built_in_server_values"
                        a:dependency="developer_mode"
                        a:key="server">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>