<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
              a:layout_width="fill_parent"
              a:layout_height="fill_parent"
              a:orientation="vertical">
    <TextView a:id="@+id/bar_detail_name"
              a:layout_height="wrap_content"
              a:layout_width="fill_parent"
              a:textSize="40sp"
            />
    <TextView a:id="@+id/bar_detail_type"
              a:layout_height="wrap_content"
              a:layout_width="fill_parent"
              a:textSize="25sp"
              />
    <RelativeLayout a:layout_height="wrap_content" a:layout_width="wrap_content">
        <Button a:id="@+id/bar_toggle_hidden"
                a:layout_width="wrap_content"
                a:layout_height="wrap_content"
                a:onClick="onClick_toggleHidden"
                a:text="@string/bar_detail_btn_hide_bar"
                />
        <Button a:id="@+id/bar_show_on_map_btn"
                a:layout_height="wrap_content"
                a:layout_width="wrap_content"
                a:layout_toRightOf="@id/bar_toggle_hidden"
                a:text="@string/bar_detail_btn_show_on_map"
                a:onClick="onClick_showOnMap"
                />
        <Button a:id="@+id/bar_add_price_btn"
                a:layout_height="wrap_content"
                a:layout_width="wrap_content"
                a:layout_toRightOf="@id/bar_show_on_map_btn"
                a:text="@string/bar_detail_btn_add_pricing"
                a:enabled="false"
                a:onClick="onClick_addPrice"
                />
    </RelativeLayout>
    <ListView a:id="@android:id/list"
              a:layout_height="wrap_content"
              a:layout_width="fill_parent"
              a:layout_weight="1"
            />
    <TextView a:id="@android:id/empty"
              a:layout_height="wrap_content"
              a:layout_width="fill_parent"
              a:text="@string/bar_detail_no_prices"
              a:layout_weight="1"
              />
    <com.google.ads.AdView a:id="@+id/bar_detail_ad_view"
                           a:layout_width="fill_parent"
                           a:layout_height="50px"
                           xmlns:ads="http://schemas.android.com/apk/res/net.beeroclock.dbeer"
                           ads:adUnitId="a14da74362a3ae5"
                           ads:adSize="BANNER"/>


</LinearLayout>